# ohte_harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Sovelluksen_testaus.md  arkkitehtuuri.md  ohjeet.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
project-pong/: .pylintrc  README.md  pyproject.toml
project-pong/dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
project-pong/src/: apca.py  ball.py  bat.py  game.py  mainprg.py  score.py  screen_render.py  wait.py
project-pong/src/tests/: bat_test.py
src/: apca.py  apca_settings.txt  ball.py  bat.py  computer_ai.py  game.py  gamevents.py  main.py  mainprg.py  mmenu.py  score.py  screen_render.py  settings.py  settings_rw.py  sound_effects.py  wait.py
src/objects/: ball.py  bat.py
src/tests/: ball_test.py  bat_test.py  computer_ai_test.py  gamevents_test.py  settings_rw_test.py  wait_test.py
src/ui/: game.py  mmenu.py  score.py  sound_effects.py
