[tool.poetry]
name = "project-pong"
version = "0.1.0"
description = "Another pong like game"
authors = ["Tino Pönni <tino.ponni@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
